--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,8 @@
       src="https://kit.fontawesome.com/d98c5f4861.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
     <title>React App</title>
   </head>
   <body>
