--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     ></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
-    <title>React App</title>
+    <title>GroundHog Mining</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
