--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mint GroundHog NFTs Mint GroundHog NFTs Mint GroundHog NFTsMint GroundHog NFTsMint GroundHog NFTsMint GroundHog NFTs"
+      content="Mint Gopher NFTs Mint GroundHog NFTs Mint GroundHog NFTsMint GroundHog NFTsMint GroundHog NFTsMint GroundHog NFTs"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
